test/pass/psvm.java
class Sing {

    public static int x;
    public String[] str_Array;

    public static void main(String[] args) {
        System.out.println(3);
    }
    
}
