test/fail/id/sameclassnames.java
class Test {
    public static int x;
}

class Test {
    public static int x;
}